Updates to campaign search, deliverables calc, landing, benchmaeks, performance and  added embedded forms

--- a/pages/BenchmarkIndex/bmIntro.mdx
+++ b/pages/BenchmarkIndex/bmIntro.mdx
@@ -1,18 +1,21 @@
+import { Bleed } from 'nextra-theme-docs'
+import { Tabs } from 'nextra/components'
+import { Callout } from 'nextra-theme-docs'
+
+<Callout type="warning" emoji="⚙️"> 
+    **New docs in the works** The benchmark explorer has had a facelift! New docs will be coming soon. TWhile this information is out of date many of the filters and data are the same or similar it still acts as a good guide!     
+</Callout>
 ## Introduction to the benchmark index
-
-### Navigation, troubleshooting & important information
-
-**IMPORTANT**
-
-Currencies displayed on report pages are \*INTERNAL\* costs. If information is shared with clients, it is crucial to apply the Goat margin or client-specific margin.
+ 
+<Callout type="error" emoji="🛑">
+  **Warning!** Currencies displayed on report pages are **INTERNAL** costs. If information is going to be shared with clients, it is **crucial** to apply the Goat margin or client-specific margin.
+</Callout>
 
 ### Navigation Pages:
 
 The report is organised into pages (visible on the left-hand side).
 
 There are 4 main pages, Paid Performance, Paid Costings, Organic Performance, Organic Costings. These sections contain extensive information and allow users to search for specific benchmarks.
-
-  
 
 For easier access, one default organic view has been created showcasing the most frequently used benchmarks with simplified filtering options.
 
@@ -56,4 +59,3 @@ Resting all filters is achieved by clicking on the green arrow at the top right 
 If you have questions regarding the functionality or data, reach out to the team on the support channel on the slack [Ibex support slack channel](https://thegoatagency.slack.com/archives/C089WQJ69LM).
 
 For data queries please tag Ed Sparks, CJ Murray or Ben Kilby.  
-For functionality queries please tag Martin Leiva-Godoy.
