--- a/pages/BenchmarkIndex/questions.mdx
+++ b/pages/BenchmarkIndex/questions.mdx
@@ -1,3 +1,7 @@
+import { Bleed } from 'nextra-theme-docs'
+import { Tabs } from 'nextra/components'
+import { Callout } from 'nextra-theme-docs'
+
 ## What type of questions can you answer with this data?
 
 *   How do Lufthansa's key costing and performance metrics compare to those of its main competitors?
