--- a/pages/BenchmarkIndex/reportScenarios.mdx
+++ b/pages/BenchmarkIndex/reportScenarios.mdx
@@ -1,3 +1,7 @@
+import { Bleed } from 'nextra-theme-docs'
+import { Tabs } from 'nextra/components'
+import { Callout } from 'nextra-theme-docs'
+
 ## Report Pages Scenarios
 
 As a default all pages are set to reflect the past year.
@@ -29,4 +33,4 @@ For the highest ER, choose TikTok if your budget allows. If you have a limited b
 
 ## Paid Costing & Paid Performance Example:
 
-Coming Soon
+In the works
