--- a/pages/InfluencerSearch.mdx
+++ b/pages/InfluencerSearch.mdx
@@ -1,5 +1,10 @@
+import { Bleed } from 'nextra-theme-docs'
+import { Tabs } from 'nextra/components'
+import { Callout } from 'nextra-theme-docs'
+
 ### Introduction
 
-Use this application to search through our database of previously activated creators with performance insights and campaign information
+**COMING SOON**  
+Search through our database of previously activated creators with campaign details, costings and performance insights! 
 
-**COMING SOON**
+
