--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,70 +1,75 @@
 import { prefix } from "../utils/prefix.js"
 import { Bleed } from 'nextra-theme-docs'
+import { Tabs } from 'nextra/components'
+import { Callout } from 'nextra-theme-docs'
 
-# Ibex User Documentation
+# 🏔️ Ibex User Documentation
 
-Welcome to the Ibex dashboard documentation. Here you'll find comprehensive guides for using our suite of tools and applications. Learn how to manage campaigns effectively and make data-driven decisions using our powerful platform.
+<Callout type="info">
+  **Welcome!** This is your comprehensive guide to the Ibex dashboard - your one-stop shop for managing campaigns and making data-driven decisions.
+</Callout>
 
-## 1. Getting Started
+## Getting Started
 
 ### Logging In
+
+Getting started with Ibex is as easy as 1-2-3! Here's how to access your dashboard:
+
 1. Navigate to [Ibex Dashboard](https://ibex.goatagency.com/dashboard)
 2. Click 'Login with Okta'
 3. Enter your WPP Okta credentials (same as your computer login)
 4. Complete the 2FA verification if prompted
 5. Contact your administrator if you need help with access
 
-### Dashboard Overview
-Once logged in, you'll see the main dashboard - your central hub for all applications and services. Take time to explore the interface and available features. Note that:
-- Some features contain sensitive cost data
-- Certain services are only available in the UK and US regions
-- Each tool has specific access permissions based on your role
+<Callout type="warning">
+  **Important:** If you're having trouble logging in, don't hesitate to reach out to your administrator. We're here to help!
+</Callout>
 
-## 2. Support and Training
+### Dashboard Overview
+
+Welcome to your command center! The main dashboard is your gateway to all Ibex applications and services. It's mission control for campaign management.
+
+<Callout type="warning">
+  **Heads Up:** 
+  - Some features contain sensitive cost data
+  - Certain services are region-specific (UK and US only)
+  - Access permissions vary based on your role
+</Callout>
+
+## Support and Training
 
 ### Available Resources
+
+We've got your back with a full suite of support options:
 - Team training sessions for all key applications
 - Regular documentation updates
 - Team support for specific questions
 - Technical assistance for any issues
 
-### Ibex support channel
+### Ibex Support Channel
 
-[Ibex support slack channel](https://thegoatagency.slack.com/archives/C089WQJ69LM)
+Need help? Join our [Ibex support slack channel](https://thegoatagency.slack.com/archives/C089WQJ69LM) 
 
 ### Feedback and Improvements
-We continuously develop and enhance our applications based on your needs. Share your ideas through:
+
+Your voice matters! We're constantly evolving based on your feedback. Share your thoughts through:
 - Direct communication with your team lead
-- Via the slack channel above
-- Using the forms available below
+- The slack channel above
+- The forms below
 
-Whether you've spotted a small bug or have a major feature request, we welcome all feedback to help improve the platform.
+<Callout emoji="😶‍🌫️">
+  **Dont be strangers:** Whether it's a tiny bug or a big feature request, we want to hear about it! Your feedback helps shape the future of Ibex.
+</Callout>
 
-[Report a bug in the system](https://forms.clickup.com/2641216/f/2gka0-50832/I0215TK4FVKHFKN5VE)
+### Quick Links
 
-[Feedback, Product requests, & Updates](https://forms.clickup.com/2641216/f/2gka0-48232/C3VGG0FH9I7IBUK4W6)
+- [Report a bug in the system](/FeedbackForms/bugs)
+- [Feedback, Product requests, & Updates](/FeedbackForms/feedback)
+- [Request a new user to be added to the system](/FeedbackForms/AccessRequest)
 
-[Request a new user to be added to the system](https://forms.clickup.com/2641216/f/2gka0-49832/PS30WJWPKI4QRPX59R)
-
-<Bleed full>
-    <iframe
-    src="https://forms.clickup.com/2641216/f/2gka0-50832/I0215TK4FVKHFKN5VE"
-    width="100%"
-    height="500px"
-    title="Bug Submission form"
-  />
-  <script 
-    async 
-    src="https://app-cdn.clickup.com/assets/js/forms-embed/v1.js"
-  />
-</Bleed>
-
-
-Whether you've spotted a small bug or have a major feature request, we welcome all feedback to help improve the platform.
-
-Best regards,
-Team Ibex
-
+<Callout type="info">
+  **Remember:** We're here to help you succeed! Don't hesitate to reach out with any questions or suggestions. Together, we'll make Ibex even better!
+</Callout>
 
 
 
