--- a/pages/ResourceRequest.mdx
+++ b/pages/ResourceRequest.mdx
@@ -1,5 +1,11 @@
+import { Bleed } from 'nextra-theme-docs'
+import { Tabs } from 'nextra/components'
+import { Callout } from 'nextra-theme-docs'
+
 ### Introduction
 
 These are typeforms that most of you will be familiar with as a part of your daily work. Now there all available in one place.
 
-Outside of the campaigh sheet request these resourses and forms are for the UK & US regions only.
+<Callout type="warning">
+    **Note** Apart from the campaign sheet request these resourses are for the UK & US regions only.
+</Callout>
